# cpp-branch-deep-linking-attribution

./: .gitignore  BUILDME.md  CMakeLists.txt  ChangeLog.md  LICENSE  README.md  ci.bat  conanfile.py  conanfile.py.in  conanfile.txt  requirements.txt  rmake  rmake.bat
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: rmake.yml  sync-readme-changelog.yml
BranchInstaller/: Branch.wxs  BranchInstaller.sln  BranchInstaller.wixproj  Product.wxs  README.md  Welcome.html
BranchSDK/: CMakeLists.txt  Doxyfile  Doxyfile.in
BranchSDK-Samples/: CMakeLists.txt
BranchSDK-Samples/TestBed-Basic/: TestBed-Basic.rc  TestBed-Basic.sln  TestBed-Basic.vcxproj  TestBed-Basic.vcxproj.filters  Welcome.html
BranchSDK-Samples/TestBed-Conan/: TestBed-Conan.rc  TestBed-Conan.vcxproj.filters  example.html
BranchSDK-Samples/TestBed-Distro/: Resource.h  TestBed-Distro.rc  TestBed-Distro.sln  TestBed-Distro.vcxproj  TestBed-Distro.vcxproj.filters  Welcome.html
BranchSDK-Samples/TestBed-Local/: Resource.h  TestBed-Local.rc  TestBed-Local.sln  TestBed-Local.vcxproj  (+2 more)
BranchSDK-Samples/console/: CMakeLists.txt
BranchSDK-Samples/console/example/: example.cpp  example.json  example.properties
BranchSDK-Samples/console/hello/: HelloCallback.cpp  HelloCallback.h  helloworld.cpp
BranchSDK-Samples/console/logdemo/: logdemo.cpp
BranchSDK-Samples/console/storagedemo/: storagedemo.cpp
BranchSDK/Visual Studio/BranchIO/: BranchIO.sln  BranchIO.vcxproj  BranchIO.vcxproj.filters
BranchSDK/Windows/: README.md
BranchSDK/Windows/BranchIO-Static/: BranchIO-Static.vcxproj  BranchIO-Static.vcxproj.filters
BranchSDK/Windows/BranchInstaller/: BranchInstaller.sln  BranchInstaller.wixproj  Components.wxs  Product.wxs  README.md  WixUI_FeatureTree_NoLic.wxs  WixUI_InstallDir_NoLic.wxs
BranchSDK/cmake/: Darwin.cmake  Linux.cmake  Windows.cmake
BranchSDK/docs/: .gitignore
BranchSDK/docs/html/: _a_p_i_client_session_8h_source.html  _advertiser_info_8h_source.html  _app_info_8h_source.html  _base_event_8h_source.html  _branch_8h_source.html  _custom_event_8h_source.html  _defines_8h_source.html  _device_info_8h_source.html  _event_8h_source.html  _i_client_session_8h_source.html  _i_packaging_info_8h_source.html  _i_request_callback_8h_source.html  _i_storage_8h_source.html  _i_string_convertible_8h_source.html  _identity_event_8h_source.html  _j_s_o_n_array_8h_source.html  _j_s_o_n_object_8h_source.html  _link_info_8h_source.html  _log_8h_source.html  _mac_address_8h_source.html  _packaging_info_8h_source.html  _property_manager_8h_source.html  _request_8h_source.html  _request_manager_8h_source.html  _session_event_8h_source.html  _session_info_8h_source.html  _sleeper_8h_source.html  _standard_event_8h_source.html  _storage_8h_source.html  _string_utils_8h_source.html  _unix_storage_8h_source.html  _version_8h_source.html  _windows_storage_8h_source.html  annotated.html  class_branch_i_o_1_1_a_p_i_client_session-members.html  class_branch_i_o_1_1_a_p_i_client_session.html  class_branch_i_o_1_1_advertiser_info-members.html  class_branch_i_o_1_1_advertiser_info.html  class_branch_i_o_1_1_app_info-members.html  class_branch_i_o_1_1_app_info.html  (+130 more)
BranchSDK/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  (+46 more)
BranchSDK/src/BranchIO/: APIClientSession.cpp  APIClientSession.h  AdvertiserInfo.cpp  AdvertiserInfo.h  AppInfo.cpp  AppInfo.h  Branch.cpp  Branch.h  Defines.cpp  Defines.h  DeviceInfo.cpp  DeviceInfo.h  IPackagingInfo.h  IRequestCallback.h  IStringConvertible.cpp  IStringConvertible.h  JSONArray.h  JSONObject.cpp  JSONObject.h  LinkInfo.cpp  LinkInfo.h  Log.cpp  MacAddress.cpp  PackagingInfo.cpp  PackagingInfo.h  PropertyManager.cpp  PropertyManager.h  Request.cpp  Request.h  RequestManager.cpp  RequestManager.h  SessionInfo.cpp  SessionInfo.h  Sleeper.cpp  Storage.h  String.h  UnixStorage.cpp  UnixStorage.h  Version.h  Version.h.in  (+4 more)
BranchSDK/src/BranchIO/Event/: BaseEvent.cpp  BaseEvent.h  CustomEvent.cpp  CustomEvent.h  Event.cpp  Event.h  IdentityEvent.h  SessionEvent.cpp  SessionEvent.h  StandardEvent.cpp  StandardEvent.h
BranchSDK/src/BranchIO/Internal/: APIClientSession.cpp  APIClientSession.h  IClientSession.h  IStorage.h  MacAddress.cpp  MacAddress.h  Request.cpp  RequestManager.cpp  RequestManager.h  Sleeper.cpp  Sleeper.h  UnixStorage.cpp  UnixStorage.h  WindowsStorage.cpp
BranchSDK/src/BranchIO/Util/: APIClientSession.cpp  APIClientSession.h  ConsoleLogChannel.cpp  ConsoleLogChannel.h  FileLogChannel.cpp  FileLogChannel.h  IClientSession.h  IStorage.h  IStringConvertible.cpp  IStringConvertible.h  Identity.cpp  Identity.h  Log.cpp  Log.h  LogChannel.cpp  LogChannel.h  MacAddress.cpp  MacAddress.h  RequestManager.cpp  RequestManager.h  Sleeper.cpp  Sleeper.h  Storage.h  StringUtils.h  UnixStorage.cpp  UnixStorage.h  WindowsStorage.cpp  WindowsStorage.h
BranchSDK/test/: AdvertiserInfoTest.cpp  BranchDefinesTest.cpp  BranchDeviceInfoTest.cpp  BranchPropertyManagerTest.cpp  EventTest.cpp  JSONObjectTest.cpp  LinkInfoTest.cpp  MacAddressTest.cpp  MockClientSession.h  PropertyManagerTest.cpp  RequestManagerTest.cpp  RequestTest.cpp  ResponseCounter.h  SessionEventTest.cpp  SleeperTest.cpp  StorageTest.cpp  StringTest.cpp  TestRequestCallback.h  Util.cpp  Util.h  unit_tests.cpp
BranchSDK/tools/: README.md  build_wix.py  component-ids.json  stage.py  version_bump.py
cmake/: Darwin.cmake  Debug.cmake  Linux.cmake  Release.cmake  Windows.cmake  gcc.cmake
tools/: README.md  build.py  build_poco.py  check_binaries.py  cpplint.py  stage.py  version_bump.py  wix.py
(+94 files in other folders)
